# Maze

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
agent/: config.py
data/gaia/: .gitattributes  GAIA.py  README.md  gaia_query.jsonl
data/openagi/: json_maker.py  openagi_query.jsonl
data/tbench/: tbench_query.jsonl
docs/: api_zh.md  frontend_platform_api_zh.md  index.md  requirements.txt
docs/assets/: extra.css
examples/distributed_gpu_smoke/: README.md  register_ray_workers.py  validate.py
examples/financial_risk_workflow/: README.md  README_ZH.md  langgraph_maze.py  langgraph_naive.py  requirements.txt
examples/multimodel_create_workflow/: README.md  README_ZH.md  main.py  requirements.txt
examples/react_workflow/: README.md  local_repair_demo.py  openai_compatible.py
maze/: __init__.py
maze/agent/: __init__.py
maze/cli/: cli.py  sandbox_cli.py
maze/client/: __init__.py
maze/config/: logging_config.py
maze/core/: server.py
maze/mcp/: __init__.py  base_client.py  http_client.py  mcp_tool_wrapper.py  stdio_client.py
maze/metrics/: __init__.py  collector.py
maze/sandbox/: __init__.py  client.py  code_sandbox.py  launcher.py  server.py
maze/tool/: __init__.py  calculator.py  csv_reader.py  date_time.py  doc_reader.py  email_sender.py  figure_reader.py  file_manager.py  file_writer.py  hash_generator.py  http_request.py  json_parser.py  mp3_reader.py  pdf_reader.py  search.py  string_processor.py  system_info.py  text_reader.py  video_reader.py  weather.py  (+1 more)
test/: README.md  api_test.py  conftest.py  simple_api_test.py  test.py  test.sh  test_cluster_resources.py  test_daps.py  test_decorator_resources.py  test_http_api.py  test_litellm_model.py  test_llm_instance.py  test_maclient_userdef.py  test_multiple_runs.py  test_results_cache.py  test_task_exception.py  test_task_runner_signature.py  test_visualization.py
tests/: test_observability.py  test_skills.py
(+610 files in other folders)
