[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maze"
version = "1.0.0"
description = "A unified command-line interface for launching the Maze system."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.119.1",
    "ray==2.50.1",
    "uvicorn[standard]",
    "zmq==0.0.0",
    "networkx==3.4.2",
    "websocket-client==1.9.0",
]

[project.scripts]
mazea = "maze.cli.cli:main"

[tool.setuptools.package-dir]
"" = "."