[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maze"
version = "1.0.0"
description = "Distributed Agent workflow system"
#authors = [{ name = "", email = "" }]
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.119.1",
    "ray==2.50.1",
    "uvicorn[standard]",
    "zmq==0.0.0",
    "networkx==3.4.2",
    "websocket-client==1.9.0",
    "cloudpickle==3.1.1",
]

[project.scripts]
mazea = "maze.cli.cli:main"

[tool.setuptools.package-dir]
"" = "."